--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=firmwareupdater
-version=0.1.0
+version=2.0.0
 author=André Victor de Oliveira Barros dos santos
 maintainer=André Victor de Oliveira Barros dos santos
-sentence=Atualizador de Firmwares
+sentence=Firmware Updater by WebServices.
 paragraph= a
 category=Signal
 url=https://github.com/Andrewtk9/firmwareupdater
